--- a/zjl/sinamail/sinamail.html
+++ b/zjl/sinamail/sinamail.html
@@ -9,6 +9,200 @@
 <body>
  <div id="top">
  	<div id="toplogo"></div>
+ 	<div id="toprit">
+ 		<div id="toprit1">
+ 				<li class="toprit1li">
+ 					<a href="#" class="nav1"></a>
+ 				</li>
+ 				<li class="toprit1li">
+ 					<a href="#" class="nav2"></a>
+ 				</li>
+ 				<li class="toprit1li">
+ 					<a  href="#" class="nav3"></a>
+                </li>
+ 		</div>
+ 		<div id="toprit2">
+ 			<span class="topadress" >
+ 				<em>zjl921124@sina.com</em>
+ 				<b class="toparrow"></b>
+ 			</span>
+ 			<span class="topquit">[退出]</span>
+ 		</div>
+ 	</div>
+ 	<div id="search">
+		<input type="hidden"  >
+		<a class="searcharow" href="#" ></a>
+		<input class="searchbtn"  value="搜索" >
+		<span>
+			<label class="searchinner" >搜索邮件</label>
+			<input class="inputxt" type="text" >
+		</span>
+ 	</div>
  </div>
+ <div id="content">
+ 	<div id="conL">
+ 		<div class="conltop">
+ 				<li class="conltopli">
+ 					<a href="#" title="写信" >
+ 						<b class="icons icon1"></b>
+ 						<span>写信</span>
+ 					</a>
+ 				</li>
+ 				<li class="conltopli">
+ 					<a href="#" title="收信">
+ 						<b class="icons icon2"></b>
+ 						<span>收信</span>
+ 					</a>
+ 				</li>
+ 				<li class="conltopli">
+ 					<a href="#" title="联系人">
+ 						<b class="icons icon3"></b>
+ 						<span>联系人</span>
+ 					</a>
+ 				</li>
+ 		</div>
+ 		<div class="conlbottom">
+ 			<div class="conlb1">
+ 				<div class="conlb1inner">
+ 					<ul class="conb1ul">
+ 						<li >
+ 							<a href="#" ><b class="unread">收件夹(113)</b></a>
+ 						</li>
+ 						<li >
+ 							<a href="#" >星标邮件<b class="icon_star"></b></a>
+ 						</li>
+ 						<li >
+ 							<a href="#" >草稿夹</a>
+ 						</li>
+ 						<li >
+ 							<a href="#" >已发送</a>
+ 						</li>
+ 						<li >
+ 							<a href="#">订阅邮件</a>
+ 						</li>
+ 						<li>
+ 							<a href="#" >垃圾邮件</a>
+ 						</li>
+ 					</ul>
+ 					<div class="ulline"></div>
+ 				</div>
+ 			</div>
+ 			<div class="conlb2">
+ 				<div class="conlb21">
+ 					<div class="moretype">
+ 						<ul isshow="true" class="moretypeul">
+ 							<li class="mtli1" title="更多分类">
+ 								<a class="mtli1arrow"></a>
+ 								<a class="mtli1txt"href="#">更多分类</a>
+ 								<span>
+ 									<a class="spanpic1" href="#"></a>
+ 									<a class="spanpic2" href="#"></a>
+ 									<a class="spanpic3" href="#"></a>
+ 								</span>
+ 							</li>
+ 						</ul>
+ 						<ul class="moretypeul2" >
+ 							<li>
+ 								<a href="#">已删除</a>
+ 							</li>
+ 							<li>
+ 								<a href="#">所有邮件</a>
+ 							</li>
+ 							<div class="liline"></div>
+ 							<li>
+ 								<a href="#" ><b class="unread">网站通知(10)</b>
+ 								</a>
+ 								<c  class="color1" >
+ 								</c>
+ 							</li>
+ 							<li >
+ 								<a href="#"><b class="unread">商讯信息(71)</b></a>
+ 								<c class="color2"></c>
+ 							</li>
+ 						</ul>
+ 						<div class="ulline"></div>
+ 				    </div>
+ 				    <div class="revmail">
+ 				    	<ul class="moretypeul">
+ 							<li class="mtli1" >
+ 								<a class="mtli1arrow"></a>
+ 								<a class="mtli1txt"href="#">代收邮箱</a>
+ 								<span>
+ 									<a class="spanpic1" href="#"></a>
+ 									<a class="spanpic2" href="#"></a>
+ 								</span>
+ 							</li>
+ 						</ul>
+ 					<div class="ulline"></div>
+ 				    </div>
+
+ 				</div>
+ 				<div class="conlb22">
+ 					<ul class="other" >
+						<li>
+							<b class="otherpic1"></b>
+							<a href="#">邮箱网盘</a>
+						</li>
+						<li>
+							<b class="otherpic2"></b>
+							<a href="#">新浪微博(1)</a>
+						</li>
+						<li>
+							<b class="otherpic3"></b>
+						  <a href="#" >每日悦读</a>
+						</li>
+ 					</ul>
+ 					<div class="moreyy">
+ 						<ul isshow="true" class="moretypeul moreyyul">
+							<li class="mtli1" >
+								<a class="mtli1arrow"></a>
+								<a class="mtli1txt"href="#">更多应用</a>
+							</li>
+ 						</ul>
+ 						<ul class="other disappear" >
+							<li>
+								<b class="otherpic4"></b>
+								<a href="#">电子传真</a>
+							</li>
+							<li>
+								<b class="otherpic5"></b>
+								<a href="#">新浪博客</a>
+							</li>
+							<li>
+								<b class="otherpic6"></b>
+							  <a href="#" >百宝箱</a>
+							</li>
+							<li>
+								<b class="otherpic7"></b>
+								<a href="#">明信片</a>
+							</li>
+							<li>
+								<c class="otherpic8"></c>
+								<a href="#">淘宝热卖</a>
+							</li>
+							<li>
+								<b class="otherpic9"></b>
+								<a href="#">音乐电台</a>
+							</li>
+							<li>
+								<b class="otherpic10"></b>
+								<a href="#">玩玩小游戏</a>
+							</li>
+ 					   </ul>
+ 					</div>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
+ 	<div id="conR">
+ 		<div id="label">
+ 			<span >
+ 				<li class="labeltxt">邮箱首页</li>
+ 				<li class="close"></li>
+ 			</span>
+ 		</div>
+ 		<div id="conrin"></div>
+ 	</div>
+</div>
 </body>
 </html>
