--- a/zjl/index.html
+++ b/zjl/index.html
@@ -78,7 +78,16 @@
 					</a>
 				</div>
 			</div>
-			<div class="cons con23"></div>
+			<div class="cons con23">
+				<div class="constit">
+				  <a href="sinamail/sinamail.html" target="_blank">新浪邮箱</a>
+				</div>
+				<div class="conscon">
+					<a href="sinamail/sinamail.html" target="_blank">
+						<img SRC="index/sinamail.jpg">
+					</a>
+				</div>
+			</div>
 			<div class="cons con24"></div>
 		</div>
 	</div>
