--- a/zjl/sinamail/sinamail.html
+++ b/zjl/sinamail/sinamail.html
@@ -200,8 +200,522 @@
  				<li class="labeltxt">邮箱首页</li>
  				<li class="close"></li>
  			</span>
+ 			<a >
+ 				<li class="labeltxt">收件夹</li>
+ 				<li class="close"></li>
+ 			</a>
+ 			<div class="kong"></div>
+ 			<span class="rubbish">
+ 				<li class="labeltxt">回收站</li>
+ 				<li class="close"></li>
+ 			</span>
  		</div>
- 		<div id="conrin"></div>
+ 		<div id="conrin">
+ 			<div id="conrintop">
+ 				<div id="conrintop1">
+ 					<div id="span1">
+	 					<span class="checkbox">
+	 						<label choose="true" class="cbpic1">
+	 							<input class="checks" type="checkbox">
+	 						</label>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul">
+	 						<li><a  href="#">全部</a></li>
+	 						<li><a   href="#" >星标</a></li>
+	 						<li><a  href="#" >不选</a></li>
+	 						<li><a   href="#">反选</a></li>
+	 						<li><a href="#">------&nbsp&nbsp</a></li>
+	 						<li><a href="#" class="">已读</a></li>
+	 						<li><a  href="#" class="">未读</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span2">
+	 					<span class="delete">
+	 						<label class="delete1"></label>
+	 						<b1>删除</b1>
+	 					</span>
+	 					<span class="jubao">
+	 						<b1>举报</b1>
+	 					</span> 	
+	 				</div>
+	 				<div id="span3">
+	 					<span class="remove">
+	 						<p class="b2">移动</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul3">
+	 						<li><a title="全部"  href="#">已发送</a></li>
+	 						<li><a title="星标"  href="#" >已删除</a></li>
+	 						<li><a title="不选" href="#" >垃圾邮件</a></li>
+	 						<li><a title="反选"  href="#">网站通知</a></li>
+	 						<li><a title="已读" href="#" >商讯信息</a></li>
+	 						<li><a href="#">-------------&nbsp&nbsp</a></li>
+	 						<li><a title="未读" href="#" >新建分类</a></li>
+	 						<li><a title="未读" href="#" >管理分类</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span4">
+	 					<span class="biaoji">
+	 						<p class="b2">标记</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul4">
+	 						<li><a  class="haveread" href="#">已读</a></li>
+	 						<li><a  class="unread" href="#" >未读</a></li>
+	 						<li><a  class="staremail" href="#" >星标邮件</a></li>
+	 						<li><a  href="#">网站通知</a></li>
+	 						<li><a  href="#" >商讯信息</a></li>
+	 						<li><a  href="#" >取消标记</a></li>
+	 						<li><a href="#">----------------&nbsp&nbsp</a></li>
+	 						<li><a  href="#" >新建分类</a></li>
+	 						<li><a  href="#" >管理分类</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span4"class="span5">
+	 					<span class="biaoji">
+	 						<p class="b2">查看</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul5">
+	 						<li><a title="全部"  href="#">全部</a></li>
+	 						<li><a title="星标"  href="#" >未读</a></li>
+	 						<li><a title="不选" href="#" >星标邮件</a></li>
+	 						<li><a title="反选"  href="#">网站通知</a></li>
+	 						<li><a title="已读" href="#" >商讯信息</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span4"class="span6">
+	 					<span class="biaoji paixu">
+	 						<p class="b2">排序</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul6">
+	 						<li><a title="全部"  href="#">日期</a></li>
+	 						<li><a title="星标"  href="#" >发件人</a></li>
+	 						<li><a title="不选" href="#" >主题</a></li>
+	 						<li><a title="反选"  href="#">大小</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span2">
+	 					<span class="delete restart">
+	 						<label class="restart1"></label>
+	 					</span>
+	 				</div>
+ 				</div>
+ 				<div id="conrintop2">
+ 					<span id="mailinfo" style="display:none"></span>
+ 					<span class="pagenum">1/6&nbsp;页</span>
+ 					<span id="pages">
+ 						<a href="#"  style="display: none;">首页</a>
+ 						<a href="#" style="display: none;">上一页</a>
+ 						<a href="#">下一页</a>
+ 						<a href="#" style="display: none;">尾页</a>
+ 					</span>
+ 					<span>
+ 						<a  href="#">跳转</a>
+ 					</span>
+ 					<a href="#" class="fenlan" title="分栏模式"></a>
+ 				</div>
+ 			</div>
+ 			<div id="conrinbottom">
+<!-- ****1******* --> 			
+ 				<div class="title1">
+ 					<strong>今天</strong>
+ 					<em>(1封)</em>
+ 				</div>
+<!-- ****1******* -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">大众点评网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					大众点评网_邮箱验证
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>8月22日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ****2******* -->
+ 				<div class="title1">
+ 					<strong>周三</strong>
+ 					<em>(2封)</em>
+ 				</div>
+<!-- ****2******* -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_star"></a>
+	 					<a href="#"  class="icon_email" ></a>
+	 					<a  href="#" class="icon"></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">We Heart It</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					Welcome to We Heart It
+	 				    </a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>8月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******3***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_star"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+	 					<a  href="#" class="icon_hxz"></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">WWF中国</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					熊猫客在线小调查 - 如果您无法正常浏本邮件，请访问页版 http://www.wwfchina.org/content/
+	 				    </a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>8月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******4***** -->
+<div class="title1">
+ 					<strong>更早</strong>
+ 					<em>(134封)</em>
+ 				</div>
+<!-- ****4******* -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_star"></a>
+	 					<a href="#"  class="icon_email" ></a>
+	 					<a  href="#" class="icon"></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">支付宝提醒</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					[收件夹]庄佳乐，支付宝电子对账单(2014.05.01-2014.05.31)
+	 				    </a>
+	 				     <a class="sxxx">商讯信息</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月22日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******5***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">美团网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					[收件夹]美团：【中央城大饭店8-10人餐】【重庆刘一手火锅8人餐】【时刻美激情世界杯登山防水电子表】...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******6***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******7***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******8***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_star"></a>
+	 					<a href="#"  class="icon_email" ></a>
+	 					<a href="#"  class="icon_hxz" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">淘宝网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					[通知]-您收藏的宝贝已经降价，建议您尽快完成交易...
+	 				    </a>
+	 				    <a class="sxxx">商讯信息</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+ <!-- ******9***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******10***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******11***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******12***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******13***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******14***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+ <!-- ******15***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_star"></a>
+	 					<a href="#"  class="icon_email" ></a>
+	 					<a href="#"  class="icon_hxz" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">淘宝网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					[通知]-您收藏的宝贝已经降价，建议您尽快完成交易...
+	 				    </a>
+	 				    <a class="sxxx">商讯信息</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>				
+<!-- ******16***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>
+<!-- ******17***** -->
+ 				<div class="comemail" >
+ 					<div class="comemail1">
+ 						<span class="move"></span>
+	 					<input class="check" type="checkbox">
+	 					<a href="#" class="icon_starnot"></a>
+	 					<a href="#"  class="icon_emailnot" ></a>
+ 					</div>
+ 					<div class="comemail2">
+ 					<a href="#" class="sender">艺龙旅行网</a>
+ 					</div>
+ 					<div class="comemail3">
+	 					<a class="emailname"href="#" >
+		 					6月现金账户及消费券月结单-高星酒店低至5折起...
+	 				    </a>
+	 				    <a class="wztz">网站通知</a>
+ 				    </div>
+ 				   <div class="comemail4">
+ 				   	<a class="tag"></a>
+ 				   	<p2>6月20日</p2>
+ 				   </div>	
+ 				</div>				
+
+
+
+ 			</div>
+ 		</div>
  	</div>
 </div>
 </body>
