--- a/zjl/index.html
+++ b/zjl/index.html
@@ -64,7 +64,7 @@
 				</div>
 				<div class="conscon">
 					<a href="kfc/kfc.html" target="_blank">
-						未完待续
+						敬请期待
 					</a>
 				</div>
 			</div>
@@ -88,7 +88,16 @@
 					</a>
 				</div>
 			</div>
-			<div class="cons con24"></div>
+			<div class="cons con24">
+				<div class="constit">
+				  <a href="sinaweibo/sinaweibo.html" target="_blank">新浪微博</a>
+				</div>
+				<div class="conscon">
+					<a href="sinaweibo/sinaweibo.html" target="_blank">
+						<img SRC="index/sinamail.jpg">
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
