--- a/zjl/sinamail/sinamail.html
+++ b/zjl/sinamail/sinamail.html
@@ -200,15 +200,15 @@
  				<li class="labeltxt">邮箱首页</li>
  				<li class="close"></li>
  			</span>
- 			<a >
+ 			<a class="receive" >
  				<li class="labeltxt">收件夹</li>
  				<li class="close"></li>
  			</a>
  			<div class="kong"></div>
- 			<span class="rubbish">
+ 			<span1 class="rubbish">
  				<li class="labeltxt">回收站</li>
  				<li class="close"></li>
- 			</span>
+ 			</span1>
  		</div>
  		<div id="conrin">
  			<div id="conrintop">
@@ -325,7 +325,7 @@
  					<em>(1封)</em>
  				</div>
 <!-- ****1******* -->
- 				<div class="comemail" >
+ 				<div class="comemail">
  					<div class="comemail1">
  						<span class="move"></span>
 	 					<input class="check" type="checkbox">
@@ -333,7 +333,7 @@
 	 					<a href="#"  class="icon_emailnot" ></a>
  					</div>
  					<div class="comemail2">
- 					<a href="#" class="sender">大众点评网</a>
+ 						<a href="#" class="sender">大众点评网</a>
  					</div>
  					<div class="comemail3">
 	 					<a class="emailname"href="#" >
@@ -535,7 +535,7 @@
  				   </div>	
  				</div>
 <!-- ******10***** -->
- 				<div class="comemail" >
+ 				<div class="comemail">
  					<div class="comemail1">
  						<span class="move"></span>
 	 					<input class="check" type="checkbox">
@@ -601,7 +601,7 @@
  				   </div>	
  				</div>
 <!-- ******13***** -->
- 				<div class="comemail" >
+ 				<div class="comemail">
  					<div class="comemail1">
  						<span class="move"></span>
 	 					<input class="check" type="checkbox">
@@ -623,7 +623,7 @@
  				   </div>	
  				</div>
 <!-- ******14***** -->
- 				<div class="comemail" >
+ 				<div class="comemail"  >
  					<div class="comemail1">
  						<span class="move"></span>
 	 					<input class="check" type="checkbox">
@@ -668,7 +668,7 @@
  				   </div>	
  				</div>				
 <!-- ******16***** -->
- 				<div class="comemail" >
+ 				<div class="comemail"  >
  					<div class="comemail1">
  						<span class="move"></span>
 	 					<input class="check" type="checkbox">
@@ -712,7 +712,117 @@
  				   </div>	
  				</div>				
 
-
+ 			</div>
+ 		</div>
+ 		<div id="conrins">
+ 			<div id="conrintop">
+ 				<div id="conrintop1">
+ 					<div id="span1">
+	 					<span class="checkbox">
+	 						<label choose="true" class="cbpic1">
+	 							<input class="checks" type="checkbox">
+	 						</label>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul">
+	 						<li><a  href="#">全部</a></li>
+	 						<li><a   href="#" >星标</a></li>
+	 						<li><a  href="#" >不选</a></li>
+	 						<li><a   href="#">反选</a></li>
+	 						<li><a href="#">------&nbsp&nbsp</a></li>
+	 						<li><a href="#" class="">已读</a></li>
+	 						<li><a  href="#" class="">未读</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span2">
+	 					<span class="delete">
+	 						<label class="delete1"></label>
+	 						<b1>删除</b1>
+	 					</span>
+	 					<span class="jubao">
+	 						<b1>举报</b1>
+	 					</span> 	
+	 				</div>
+	 				<div id="span3">
+	 					<span class="remove">
+	 						<p class="b2">移动</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul3">
+	 						<li><a title="全部"  href="#">已发送</a></li>
+	 						<li><a title="星标"  href="#" >已删除</a></li>
+	 						<li><a title="不选" href="#" >垃圾邮件</a></li>
+	 						<li><a title="反选"  href="#">网站通知</a></li>
+	 						<li><a title="已读" href="#" >商讯信息</a></li>
+	 						<li><a href="#">-------------&nbsp&nbsp</a></li>
+	 						<li><a title="未读" href="#" >新建分类</a></li>
+	 						<li><a title="未读" href="#" >管理分类</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span4">
+	 					<span class="biaoji">
+	 						<p class="b2">标记</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul4">
+	 						<li><a  class="haveread" href="#">已读</a></li>
+	 						<li><a  class="unread" href="#" >未读</a></li>
+	 						<li><a  class="staremail" href="#" >星标邮件</a></li>
+	 						<li><a  href="#">网站通知</a></li>
+	 						<li><a  href="#" >商讯信息</a></li>
+	 						<li><a  href="#" >取消标记</a></li>
+	 						<li><a href="#">----------------&nbsp&nbsp</a></li>
+	 						<li><a  href="#" >新建分类</a></li>
+	 						<li><a  href="#" >管理分类</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span4"class="span5">
+	 					<span class="biaoji">
+	 						<p class="b2">查看</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul5">
+	 						<li><a title="全部"  href="#">全部</a></li>
+	 						<li><a title="星标"  href="#" >未读</a></li>
+	 						<li><a title="不选" href="#" >星标邮件</a></li>
+	 						<li><a title="反选"  href="#">网站通知</a></li>
+	 						<li><a title="已读" href="#" >商讯信息</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span4"class="span6">
+	 					<span class="biaoji paixu">
+	 						<p class="b2">排序</p>
+	 						<label class="cbpic2"></label>
+	 					</span>
+	 					<ul class="checkboxul checkboxul6">
+	 						<li><a title="全部"  href="#">日期</a></li>
+	 						<li><a title="星标"  href="#" >发件人</a></li>
+	 						<li><a title="不选" href="#" >主题</a></li>
+	 						<li><a title="反选"  href="#">大小</a></li>
+	 					</ul>
+	 				</div>
+	 				<div id="span2">
+	 					<span class="delete restart">
+	 						<label class="restart1"></label>
+	 					</span>
+	 				</div>
+ 				</div>
+ 				<div id="conrintop2">
+ 					<span id="mailinfo" style="display:none"></span>
+ 					<span class="pagenum">1/6&nbsp;页</span>
+ 					<span id="pages">
+ 						<a href="#"  style="display: none;">首页</a>
+ 						<a href="#" style="display: none;">上一页</a>
+ 						<a href="#">下一页</a>
+ 						<a href="#" style="display: none;">尾页</a>
+ 					</span>
+ 					<span>
+ 						<a  href="#">跳转</a>
+ 					</span>
+ 					<a href="#" class="fenlan" title="分栏模式"></a>
+ 				</div>
+ 			</div>
+ 			<div id="conrinbottoms">			
 
  			</div>
  		</div>
