--- a/zjl/webqq/webqq.html
+++ b/zjl/webqq/webqq.html
@@ -537,5 +537,219 @@
 			<a id="yijianfankui">意见反馈</a>
 		</div>
 	</div>
+	<!-- start -->
+	<div id="chatall">
+		<div  class="talkarea" >      
+			<div class="talktop">						
+				<div class="talktap" isshow="true" href="#">							
+					<a href="#"></a>						
+				</div>						
+				<span class="talkname">程仙女</span>						
+				<a class="talkclose" href="#">关闭</a>						
+			<!-- 	<a class="TTMin">最小化</a>			 -->		
+			</div>	
+			<!-- tipstart -->
+				<div class="tip" >
+					<ul  class="tipul" >
+							<li  class="viewQzone">
+   							<div class="tippic tippic1"></div>
+   							QQ空间
+							</li>
+							<li  class="viewInfo">
+    						<div class="tippic tippic2"></div>
+    						详细资料
+							</li>
+							<li class="viewRecord">
+    						<div class="tippic tippic3"></div>
+  							  聊天记录
+							</li>
+					</ul>
+				</div>
+			<!-- tipsend -->				
+			<div class="talkcon">									
+				<div class="TalkBottomArea">							
+					<!-- 聊天内容区域 -->							
+					<div class="TalkDesContent">							
+					</div>							
+					<!-- 聊天内容区域 end-->							
+					<!-- 聊天框底部 -->							
+					<div class="TalkBottom">								
+						<div class="TBFace">								
+							<a class="TBFacePic"></a>								
+						</div>								
+						<input class="TBInput" value="">								
+						<button class="TBBtn">								
+							<span>发送</span>								
+						</button>							
+					</div>							
+					<!-- 聊天框底部 end -->							
+					<!-- 聊天表情 -->							
+					<div isshow="no" class="qqimages">								
+						<div class="qqimagesArea qqimagesA01">								
+							<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>									
+							<ul> 										
+								<li class="qqimageEve" title="闭嘴"></li>										
+								<li class="qqimageEve" title="睡"></li>										
+								<li class="qqimageEve" title="大哭"></li>										
+								<li class="qqimageEve" title="尴尬"></li>										
+								<li class="qqimageEve" title="发怒"></li>										
+								<li class="qqimageEve" title="调皮"></li>										
+								<li class="qqimageEve" title="龇牙"></li>									
+							</ul>									
+							<ul> 										
+							<li class="qqimageEve" title="惊讶"></li>										
+							<li class="qqimageEve" title="难过"></li>										
+							<li class="qqimageEve" title="酷"></li>										
+							<li class="qqimageEve" title="冷汗"></li>										
+							<li class="qqimageEve" title="抓狂"></li>										
+							<li class="qqimageEve" title="吐"></li>										
+							<li class="qqimageEve" title="delKey"></li>									
+							</ul>								
+						</div>								
+						<div class="qqimagesArea qqimagesA02 disappear">									
+							<ul> 										
+								<li class="qqimageEve" title="偷笑"></li>										
+								<li class="qqimageEve" title="可爱"></li>										
+								<li class="qqimageEve" title="白眼"></li>										
+								<li class="qqimageEve" title="傲慢"></li>										
+								<li class="qqimageEve" title="饥饿"></li>										
+								<li class="qqimageEve" title="困"></li>										
+								<li class="qqimageEve" title="惊恐"></li>									
+							</ul>									
+							<ul> 										
+								<li class="qqimageEve" title="流汗"></li>										
+								<li class="qqimageEve" title="憨笑"></li>										
+								<li class="qqimageEve" title="大兵"></li>										
+								<li class="qqimageEve" title="奋斗"></li>										
+								<li class="qqimageEve" title="咒骂"></li>										
+								<li class="qqimageEve" title="疑问"></li>										
+								<li class="qqimageEve" title="嘘"></li>									
+							</ul>									
+							<ul> 										
+								<li class="qqimageEve" title="晕"></li>										
+								<li class="qqimageEve" title="折磨"></li>										
+								<li class="qqimageEve" title="衰"></li>										
+								<li class="qqimageEve" title="骷髅"></li>										
+								<li class="qqimageEve" title="敲打"></li>										
+								<li class="qqimageEve" title="再见"></li>										
+								<li class="qqimageEve" title="delKey"></li>									
+							</ul>								
+						</div>								
+						<div class="qqimagesArea qqimagesA03 disappear">									
+							<ul> 										
+								<li class="qqimageEve" title="擦汗"></li>										
+								<li class="qqimageEve" title="抠鼻"></li>										
+								<li class="qqimageEve" title="鼓掌"></li>										
+								<li class="qqimageEve" title="糗大了"></li>										
+								<li class="qqimageEve" title="坏笑"></li>										
+								<li class="qqimageEve" title="左哼哼"></li>										
+								<li class="qqimageEve" title="右哼哼"></li>									
+							</ul>									
+							<ul> 										
+								<li class="qqimageEve" title="哈欠"></li>									
+									<li class="qqimageEve" title="鄙视"></li>										
+									<li class="qqimageEve" title="委屈"></li>										
+									<li class="qqimageEve" title="快哭了"></li>										
+									<li class="qqimageEve" title="阴险"></li>										
+									<li class="qqimageEve" title="亲亲"></li>										
+									<li class="qqimageEve" title="吓"></li>									
+							</ul>									
+							<ul> 										
+								<li class="qqimageEve" title="可怜"></li>										
+								<li class="qqimageEve" title="菜刀"></li>										
+								<li class="qqimageEve" title="西瓜"></li>										
+								<li class="qqimageEve" title="啤酒"></li>										
+								<li class="qqimageEve" title="篮球"></li>										
+								<li class="qqimageEve" title="乒乓"></li>										
+								<li class="qqimageEve" title="delKey"></li>									
+							</ul>								
+						</div>								
+							<div class="qqimagesArea qqimagesA04 disappear">									
+								<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>										
+							<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>								
+							</div>
+							<div class="qqimagesArea qqimagesA05 disappear">									
+								<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>										
+							<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>								
+							</div>								
+							<div class="qqimagesArea qqimagesA06 disappear">									
+								<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>								
+								<ul> 								
+								<ul> 										
+								<li class="qqimageEve" title="微笑"></li>										
+								<li class="qqimageEve" title="撇嘴"></li>										
+								<li class="qqimageEve" title="色"></li>										
+								<li class="qqimageEve" title="发呆"></li>										
+								<li class="qqimageEve" title="得意"></li>										
+								<li class="qqimageEve" title="流泪"></li>										
+								<li class="qqimageEve" title="害羞"></li>									
+							</ul>									</ul>								
+						</div>								
+						<div class="qqimagesSelect">									
+							<ul>										
+								<li><a changecss="qqimagesA01" class="qqISIcon disappear"></a> </li>							
+								<li><a changecss="qqimagesA02" class="qqISIcon"></a> </li>										
+								<li><a changecss="qqimagesA03" class="qqISIcon"></a> </li>										
+								<li><a changecss="qqimagesA04" class="qqISIcon"></a> </li>										
+								<li><a changecss="qqimagesA05" class="qqISIcon"></a> </li>										
+								<li><a changecss="qqimagesA06" class="qqISIcon"></a> </li>									
+							</ul>								
+						</div>							
+					</div>						
+					<!-- 聊天表情 end-->						
+				</div>					
+			</div>		
+		</div>
+	</div>
+	
+	<!-- start -->
 </body>
 </html>
